# Erp_code

./: .gitignore  API_FRONTEND_ACCESS_MATRIX.md  API_WIRING_MASTER_ROADMAP.md  API_WIRING_PROGRESS.md  BEGINNER_SETUP_AND_TESTING_GUIDE.md  COMPLETE_WORKFLOW_GUIDE.md  COMPREHENSIVE_APP_ISSUES.md  CRM_ERP_INSIGHTS_MIGRATION_AUDIT.md  CURRENT_STUBS_AND_404_FINDINGS.md  DEMO_CREDENTIALS.md  ERP_Completion_Report.md  ERP_Project_Analysis.md  EXECUTION_CONSOLIDATED_HANDOFF.md  FIX_LOG.md  FRONTEND_GAP_STATUS.md  HR Organitional Chart.xlsx  MD  OPTION_C_CHANGE_SUMMARY.md  PRODUCTION_GRADE_READINESS.md  PROJECT_CRUD_IMPLEMENTATION_NOTES.md  PROJECT_WORKFLOW_GAP_ANALYSIS.md  SURVEY_BOQ_INFRA_DATA_ENTRY_GUIDE.md  TODO.md  UAT_END_TO_END_SAMPLE_FLOW.md  WIRING_STATUS_REPORT.md  accountability_traceability_core_spec.md  accountability_traceability_execution_plan.md  alerts_reminders_collaboration_model.md  all_apis.json  anda_exhaustive_compliance_list.md  anda_full_compliance_strategy.md  api list.docx  app_audit_report_2026-03-30.md  app_e2e_uat_results_2026-03-23.md  backend.md  backend_apis.json  backend_builtin_vs_custom_refactor_map.md  backend_costing_plan.md  backend_execution_guide.md  backend_hr_plan.md  (+47 more)
backend/gov_erp/: .pre-commit-config.yaml  README.md  license.txt  pyproject.toml
backend/gov_erp/gov_erp/: accountability.py  accountability_api.py  admin_api.py  alert_dispatcher.py  alerts_api.py  anda_import_api.py  api.py  api_utils.py  demo_seed.py  dms_api.py  doc_event_handlers.py  execution_api.py  finance_api.py  hooks.py  hr_api.py  install.py  inventory_api.py  master_data.py  modules.txt  om_api.py  patches.txt  permission_engine.py  permissions.py  pm_workspace_api.py  poc_setup.py  presales_api.py  procurement_api.py  project_api.py  project_workflow.py  rbac_api.py  rbac_audit.py  rbac_seed.py  reporting_api.py  role_utils.py  spine_setup.py  survey_api.py  system_api.py  tender_api.py
backend/gov_erp/gov_erp/gov_erp/: permission_engine.py  rbac_seed.py
(+1152 files in other folders)
